Placing the distro images. Removing links to other pages in nav bar for now. Fixed whitespace in style.less

--- a/less/style.less
+++ b/less/style.less
@@ -1,27 +1,50 @@
 @import "elements.less";
 @import "../dependencies/bootstrap/less/variables.less";
 
+
+@media (min-width: 979px) {
+    body {
+        padding-top: 60px;
+    }
+}
+
+body {
+    background-color:#89CEDE;
+    padding-bottom: 40px;
+}
+
+.distribution {
+    img {
+        max-width: 100%;
+        border: 1px solid black;
+        .border-radius(5px, 5px, 5px, 5px);
+    }
+    p {
+        text-align: left;
+    }
+}
+
 .row input {
-	margin-left: 20px;
+    margin-left: 20px;
 }
 
 .needjs {
-	visibility: hidden;
-	display: none;
+    visibility: hidden;
+    display: none;
 }
 
 .brand {
     h1 {
         color: #fff;
-    }	
-	img {
+    }
+    img {
         max-height: 80px;
     }
 }
 
 .nav {
-	a {
-		font-size: 20px;
+    a {
+        font-size: 20px;
     }
 }
 .special {
@@ -30,17 +53,16 @@
     text-transform: uppercase;
 }
 
-
 .heart {
     max-height: 1.3em;
 }
 
 .hero-unit {
-	padding: 4%;
+    padding: 4%;
 }
 
 .carousel {
-	margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .button-picker {
@@ -48,9 +70,9 @@
         border: 2px solid black;
     }
     li:first-child a {
-		.border-radius(0, 0, 5px, 5px);
+        .border-radius(0, 0, 5px, 5px);
     }
-	li:last-child a {
+    li:last-child a {
         .border-radius(5px, 5px, 0, 0);
     }
 }
@@ -60,13 +82,13 @@
 .hero-btn {
     cursor: pointer;
     padding:15px 0 15px 0;
-	strong {
+    strong {
         font-size: 250%;
     }
-	p {
-	    color: black;
+    p {
+        color: black;
         padding: 0 5%;
-	}
+    }
 }
 
 .hero-unit {
@@ -74,9 +96,14 @@
 }
 
 @media (max-width: 767px) {
-	.hero-btn {
-		margin-bottom: 20px !important;
-	}
+    .hero-btn {
+        margin-bottom: 20px !important;
+    }
+    .distribution {
+        img {
+            max-width: 50%;
+        }
+    }
 }
 
 .platform-picker {
@@ -84,41 +111,41 @@
 }
 
 @media (max-width: 980px) and (min-width: 768px), (max-width: 450px) {
-	.platform-picker {
-		width: 200px;
-	}
+    .platform-picker {
+        width: 200px;
+    }
 
-	.button-picker li:nth-child(2) a {
-		border-top-right-radius: 5px;
-	}
-	
-	.button-picker li:nth-child(3) a {
-		border-bottom-left-radius: 5px;
-	}
+    .button-picker li:nth-child(2) a {
+        border-top-right-radius: 5px;
+    }
 
-	.button-picker li:nth-child(4) a {
-		border-top-right-radius: 0px;
-		border-bottom-right-radius: 5px;
-	}
+    .button-picker li:nth-child(3) a {
+        border-bottom-left-radius: 5px;
+    }
+
+    .button-picker li:nth-child(4) a {
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 5px;
+    }
 }
 
 @media (max-width: 768px) and (min-width: 450){
-	.platform-picker {
-		width: 400px;
-	}
-	
-	.button-picker {
-		li:nth-child(2) a {
+    .platform-picker {
+        width: 400px;
+    }
+
+    .button-picker {
+        li:nth-child(2) a {
             border-top-right-radius: 5px;
-		}
-		li:nth-child(3) a {
-		    border-bottom-left-radius: 5px;
-	    }
-		li:nth-child(4) a {
-		    border-top-right-radius: 0px;
-		    border-bottom-right-radius: 5px;
-		}
-	}
+        }
+        li:nth-child(3) a {
+            border-bottom-left-radius: 5px;
+        }
+        li:nth-child(4) a {
+            border-top-right-radius: 0px;
+            border-bottom-right-radius: 5px;
+        }
+    }
 }
 
 .platform {
@@ -135,24 +162,24 @@
 }
 
 .clearfix:after {
-	content: ".";
-	display: block;
-	clear: both;
-	visibility: hidden;
-	line-height: 0;
-	height: 0;
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
 }
- 
+
 .clearfix {
-	display: inline-block;
+    display: inline-block;
 }
- 
+
 html[xmlns] .clearfix {
-	display: block;
+    display: block;
 }
- 
+
 * html .clearfix {
-	height: 1%;
+    height: 1%;
 }
 
 .platform .blackberry {
@@ -167,7 +194,7 @@ html[xmlns] .clearfix {
     left: 22px;
     top: 16px;
     line-height: 0;
-    display: block;    
+    display: block;
 }
 
 /*button-picker*/
@@ -177,14 +204,14 @@ html[xmlns] .clearfix {
 }
 
 .button-picker-nojs li {
-	list-style: none;
-	float: left;
-	position: relative;
-	width: 96px;
+    list-style: none;
+    float: left;
+    position: relative;
+    width: 96px;
 }
 
 .button-picker-nojs a{
-	visibility: hidden;
+    visibility: hidden;
 }
 
 .guide .button-picker li{padding:0; list-style:none; margin:0}
